[package]
name = "blockchain"
version = "0.1.0"
authors = ["valentine-mario <valentine13400@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust-crypto = "^0.2"
num-bigint = "0.2"
num-traits = "0.2"